# ovos-tool-calling-pipeline-plugin

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DEV_LOOP.md  INSTALL_NOTES.md  INTENT_MATCHERS.md  PIPELINE_PROTOCOL.md  ROADMAP.md  TODO.md
ovos_tool_calling/: __init__.py  agent.py  dispatch.py  gate.py  llm.py  schemas.py
tests/: test_agent.py  test_dispatch.py  test_gate.py  test_llm.py  test_pipeline.py  test_schemas.py
